Updated with new information

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
                     <img src="logo.png" alt="logo picture"/>
                     <h1>Summer Kearney</h1>
                     <ul> 
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="works.html" targret="_blank">Works</a></li>
                         <li><a href = "experience.html">Experience</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -28,7 +28,7 @@
             </div>
             
         <div class="title">
-                <h1>Contact Me!</h1> 
+                <h1>Contact Me</h1> 
                 <!--https://www.rawpixel.com/image/2533993/premium-illustration-image-abstract-background-->
                 <img src="backing.jpg" alt="Background Photo"/>
         </div>
@@ -38,7 +38,8 @@
             <section class="rightSection">
             <p>Email:<a href="mailto:s_kearney@fanshaweonline.ca"> s_kearney@fanshaweonline.ca</a></p>
             </br>
-            <p>Phone:<a href="tel:2266273412"> (226)-627-3412</a></p>
+            <p>LinkedIn:<a href="https://ca.linkedin.com/in/summer-kearney"> Summer-Kearney</a></p>
+            <!-- <p>Phone:<a href="tel:2266273412"> (226)-627-3412</a></p> -->
             </section>
             <aside class="leftAside">
                 <!-- https://www.istockphoto.com/search/2/image?phrase=contact+us -->
