--- a/experience.html
+++ b/experience.html
@@ -16,7 +16,7 @@
                     <img src="logo.png" alt="logo picture"/>
                     <h1>Summer Kearney</h1>
                     <ul> 
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="works.html" targret="_blank">Works</a></li>
                         <li><a href = "experience.html">Experience</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -35,46 +35,83 @@
 
           
         <div class="content">
- <div id="experience">  
-            <section class="leftSection">
-            <h2>Work Experience</h2>
-        </br>
-            <h3>Reseptionist</h3>
-            <h5>AUG 2019 - PRESENT</h5>
-            <h4>Kniaziew Optometry, Chatham, ON</h4>
-            <ul>
-                <li>Filed claims with vision and medical insurance companies to garner payment for optical services.</li> 
-                <li>Confirmed appointments, communicated with clients and updated client records.</li> 
-                <li>Completed filing, sorting, and file retention</li> 
-                <li>Managed multiple tasks and met time-sensitive deadlines.</li>
-            </ul>
-        </br>
+            <div id="experience">  
 
-            <h3>Customer Service Associate</h3>
-            <h5>APR 2019 - NOV 2019</h5>
-            <h4>Home Hardware, Chatham, ON</h4>
-            <ul>
-                <li>Checked pricing, scanned items, applied discounts, and printed receipts to ring up customers.</li> 
-                <li>Helped customers complete purchases and locate items. </li> 
-                <li>Balanced and organized cash register by handling cash and counting change. </li> 
-                <li>Stocked shelves with new products weekly. </li>
-            </ul>
+                <section class="leftSection">
+                <h2>Work Experience</h2>
+                </br>
 
-        </br>
-        </br>
+                <h3>Computer Programmer Analysis</h3>
+                <h5>JAN 2023 - PRESENT</h5>
+                <h4>Government Of Canada, London, ON</h4>
+                <ul>
+                    <li>Developed and debugged programs in VBA to scrape information from COBOL Mainframe.</li> 
+                    <li>Maintained and troubleshooted previously developed applications.</li> 
+                    <li>Provided IT support and training to employees regarding the programs and how they are used.</li> 
+                    <li>Completed database pulls for employees based on a set of criteria.</li>
+                </ul>
+                </br>
 
-            <h2>Education</h2>
+                <h3>Reseptionist</h3>
+                <h5>AUG 2019 - SEP 2022</h5>
+                <h4>Kniaziew Optometry, Chatham, ON</h4>
+                <ul>
+                    <li>Filed claims with vision and medical insurance companies to garner payment for optical services.</li> 
+                    <li>Confirmed appointments, communicated with clients and updated client records.</li> 
+                    <li>Completed filing, sorting, and file retention</li> 
+                    <li>Managed multiple tasks and met time-sensitive deadlines.</li>
+                </ul>
+            </br>
+
+                <h3>Customer Service Associate</h3>
+                <h5>APR 2019 - NOV 2019</h5>
+                <h4>Home Hardware, Chatham, ON</h4>
+                <ul>
+                    <li>Checked pricing, scanned items, applied discounts, and printed receipts to ring up customers.</li> 
+                    <li>Helped customers complete purchases and locate items. </li> 
+                    <li>Balanced and organized cash register by handling cash and counting change. </li> 
+                    <li>Stocked shelves with new products weekly. </li>
+                </ul>
+
+            </br>
+            </br>
+
+                <h2>Education</h2>
+            </br>
+                <h3>Advanced Diploma: Computer Programming & Analysis</h3>
+                <h5>SEP 2021 - PRESENT</h5>
+                <h4>Fanshawe College of Applied Arts and Technology</h4>
+                <ul>
+                    <li>Maintained an overall GPA of 4.12.</li> 
+                    <li>Dean's Honour Roll.</li> 
+                    <li>Relevant Courses:</li>
+                    <ul>
+                        <li>OOP in Java, C++, & C#</li>
+                        <li>Data Structures & Algorithms</li>
+                        <li>Client Server Development</li>
+                        <li>Web Development & Web Scripting</li>
+                        <li>Advanced Databases & Database Managment</li>
+                    </ul>
+                </ul>
         </br>
-            <h3>Advanced Diploma: Computer Programming & Analysis</h3>
-            <h5>SEP 2021 - PRESENT</h5>
-            <h4>Fanshawe College of Applied Arts and Technology</h4>
         </br>
-    </br>
             <h3>High School Diploma</h3>
             <h5>SEP 2017 - JUN 2021</h5>
             <h4>Ursuline College Catholic Secondary School</h4>
+            <ul>
+                <li>Grade 9-12 Honor Roll</li> 
+                <li>Relevant Courses:</li>
+                <ul>
+                    <li>Python for Beginners</li>
+                    <li>Intro to JavaScript</li>
+                    <li>OOP in Java</li>
+                </ul>
+            </ul>
         </section>
             <aside class="rightImgBar">
+                <!--https://www.statcan.gc.ca/o1/en/plus/251-have-you-heard-statistics-canada-getting-app-->
+               <img src="CRA.jpg" alt="Image of CRA Technology Logo"/> 
+
                 <!--https://www.facebook.com/KniaziewOptometry1-->
                <img src="kniaziew.jpg" alt="Image of Knaziew Optometry Logo"/> 
 
