--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <img src="logo.png" alt="logo picture"/>
                     <h1>Summer Kearney</h1>
                     <ul> 
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="works.html" targret="_blank">Works</a></li>
                         <li><a href = "experience.html">Experience</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -38,11 +38,10 @@
         <div class="content">
             <section class="rightSection">
                 <h2>About Me</h2>
-                <p>Hi! My name is Summer! I am 18 years old and a student at Fanshawe College studying Computer Programming.
+                <p>Hi! My name is Summer! My Pronouns are she/her. I am a student at Fanshawe College, in my last year studying Computer Programming.
                     I was born and raised in Ontario, Canada.
-                    In my free time I enjoy visiting with friends and family or anything that involves me expressing my creativity.
-                    I currently work at <a href="https://www.kniaziewoptometry.com/">Kniaziew Optometry</a>. You can read more about my work 
-                    expirence on the <a href = "experience.html">Experience</a> tab.
+                    I currently work at the <a href="https://www.canada.ca/en/revenue-agency.html">Government Of Canada</a>. You can read more about my work 
+                    experience on the <a href = "experience.html">Experience</a> tab.
                 </p>
                 <p>
                     Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur
