--- a/works.html
+++ b/works.html
@@ -16,7 +16,7 @@
                     <img src="logo.png" alt="logo picture"/>
                     <h1>Summer Kearney</h1>
                     <ul> 
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="works.html" targret="_blank">Works</a></li>
                         <li><a href = "experience.html">Experience</a></li>
                         <li><a href="contact.html">Contact</a></li>
