--- a/index.html
+++ b/index.html
@@ -38,14 +38,19 @@
         <div class="content">
             <section class="rightSection">
                 <h2>About Me</h2>
-                <p>Hi! My name is Summer! My Pronouns are she/her. I am a student at Fanshawe College, in my last year studying Computer Programming.
-                    I was born and raised in Ontario, Canada.
-                    I currently work at the <a href="https://www.canada.ca/en/revenue-agency.html">Government Of Canada</a>. You can read more about my work 
-                    experience on the <a href = "experience.html">Experience</a> tab.
+                <p>Hello there! My name is Summer! My Pronouns are she/her. I am a student at Fanshawe College, in my last year studying Computer Programming.
+                    I was born and raised in Ontario, Canada. Around school, I am currently working at the <a href="https://www.canada.ca/en/revenue-agency.html">Government Of Canada</a>.
+                    For a deeper dive into my professional journey, head over to the <a href = "experience.html">Experience</a> tab.
                 </p>
                 <p>
-                    Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur
-                </p>
+                    Outside of the coding realm, I find joy in various hobbies. 
+                    Solving puzzles and tackling problems align with my analytical mindset. 
+                    I also have an appreciation for capturing moments through photography, exploring my creative side.
+                    </br>
+                    I'm passionate about continual learning and am always eager to expand my skills. 
+                    I am always seeking opportunities to expand my skills and embrace new challenges. 
+                    Please feel free to <a href = "contact.html">reach out to me</a>!
+                 </p>
             </section>
             <aside class="leftAside">
                 <img class="homeImg" src="me_pic.jpg" alt="A photo of myself, Summer."/>
