changed layout for ipads

--- a/experience.html
+++ b/experience.html
@@ -52,7 +52,7 @@
                 </ul>
                 </br>
 
-                <h3>Reseptionist</h3>
+                <h3>Receptionist</h3>
                 <h5>AUG 2019 - SEP 2022</h5>
                 <h4>Kniaziew Optometry, Chatham, ON</h4>
                 <ul>
