changed text size

--- a/experience.html
+++ b/experience.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Expirence</title>
+        <title>Experience</title>
         <link href="main.css" rel="stylesheet" type="text/css">
         <!--set viewport-->
         <meta name="viewport" content="width=device-width, initial-scale=1">        
@@ -94,7 +94,6 @@
                     </ul>
                 </ul>
         </br>
-        </br>
             <h3>High School Diploma</h3>
             <h5>SEP 2017 - JUN 2021</h5>
             <h4>Ursuline College Catholic Secondary School</h4>
@@ -117,8 +116,11 @@
 
                 <!--https://www.istockphoto.com/illustrations/stocking-shelves-->
                 <img src="stocking_shelves.jpg" alt="Image of a person stalking shelves"/>
+            </br>
                 <!--https://www.siteuptime.com/blog/2021/07/30/5-reasons-to-learn-a-new-computer-programming-language-this-year/-->
                 <img src="programmer.jpg" alt="Image of a laptop with code on it."/>
+                <!--https://www.st-clair.net/ucc/grade-9-lancer-link-orientation.aspx-->
+                <img src="lancer.png" alt="Image of a ursuline college chatham lancer logo."/>
             </aside>
             </div>
         </div>
