Updated image sizes on work page and home page. Updated ipad responsiveness

--- a/experience.html
+++ b/experience.html
@@ -116,9 +116,12 @@
 
                 <!--https://www.istockphoto.com/illustrations/stocking-shelves-->
                 <img src="stocking_shelves.jpg" alt="Image of a person stalking shelves"/>
-            </br>
-                <!--https://www.siteuptime.com/blog/2021/07/30/5-reasons-to-learn-a-new-computer-programming-language-this-year/-->
-                <img src="programmer.jpg" alt="Image of a laptop with code on it."/>
+                <br><br><br>
+                <!--https://en.wikipedia.org/wiki/Fanshawe_College-->
+                <img src="Fanshawe.png" alt="Image of a Fanshawe College London logo."/>
+                <!-- https://www.siteuptime.com/blog/2021/07/30/5-reasons-to-learn-a-new-computer-programming-language-this-year/-->
+                <!-- <img src="programmer.jpg" alt="Image of a laptop with code on it."/>
+                <br> <br><br>--><br><br>  
                 <!--https://www.st-clair.net/ucc/grade-9-lancer-link-orientation.aspx-->
                 <img src="lancer.png" alt="Image of a ursuline college chatham lancer logo."/>
             </aside>
