added snake and chip project

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <link href="main.css" rel="stylesheet" type="text/css">
         <!--set viewport-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="logo.png">
         <style>
         </style>
     </head>
@@ -36,7 +37,7 @@
       
         <div class="content">
             <section class="rightSection">
-            <p>Email:<a href="mailto:s_kearney@fanshaweonline.ca"> s_kearney@fanshaweonline.ca</a></p>
+            <p>Email:<a href="mailto:s_kearney@fanshaweonline.ca"> skearney95@live.ca</a></p>
             </br>
             <p>LinkedIn:<a href="https://ca.linkedin.com/in/summer-kearney"> Summer-Kearney</a></p>
             <!-- <p>Phone:<a href="tel:2266273412"> (226)-627-3412</a></p> -->
