--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link href="main.css" rel="stylesheet" type="text/css">
         <!--set viewport-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="logo.png">
         <style>
         </style>
     </head>
@@ -39,7 +40,7 @@
             <section class="rightSection">
                 <h2>About Me</h2>
                 <p>Hello there! My name is Summer! My Pronouns are she/her. I am a student at Fanshawe College, in my last year studying Computer Programming.
-                    I was born and raised in Ontario, Canada. Around school, I am currently working at the <a href="https://www.canada.ca/en/revenue-agency.html">Government Of Canada</a>.
+                    I was born and raised in Ontario, Canada. Around school, I am currently working at the <a href="https://www.canada.ca/en/revenue-agency.html" target="_blank">Government Of Canada</a>.
                     For a deeper dive into my professional journey, head over to the <a href = "experience.html">Experience</a> tab.
                 </p>
                 <p>
