--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,8 @@
         <title>Experience</title>
         <link href="main.css" rel="stylesheet" type="text/css">
         <!--set viewport-->
-        <meta name="viewport" content="width=device-width, initial-scale=1">        
+        <meta name="viewport" content="width=device-width, initial-scale=1">  
+        <link rel="icon" type="image/x-icon" href="logo.png">      
         <style>
         </style>
     </head>
