corrected spelling errors

--- a/works.html
+++ b/works.html
@@ -42,7 +42,8 @@
                     <br><br>
                     This was my first real programming project! 
                     This project was done in grade 11, originally using Java Swing component in Eclipse. 
-                    It was my first expirience creating a GUI. It helped develop my understanding of arrays, especially 3D arrays. 
+                    It was my first expirience creating a GUI. It helped develop my understanding of arrays, especially 3D arrays.
+                    This project was my first introduction to using event listeners to listen for keyboard input, allowing the snake to move when the arrow keys are pressed.  
                     Of course, I have freshened it up a little since but I've still 
                     kept the main parts of the program, and a button that brings the theme back to the original one created in 2019. 
                     <br>
