Changed template photo on works page

--- a/works.html
+++ b/works.html
@@ -58,7 +58,7 @@
                     It was built using Vue, a JavaScript framework, to build the user interface. 
                     The backend utilized ASP.Net Core technology to establish a REST API that uses HTTP protocols and requests to POST, PUT, GET, and DELETE data.
                     The website and the database are hosted via Azure. this project showed me a more in-depth view of the backend of a program. 
-                    I learned about cross-origin resource sharing (CORS), the distinctions between authorization and authentication, and gained insight into how the Data Access Layer manages data
+                    I learned about cross-origin resource sharing (CORS), the distinctions between authorization and authentication, and gained insight into how protect a password by generating a hash and salt.
                      Learning about the process of how data is transferred in the DAL was very interesting to me! 
                      I learned about the controller's role in handling requests from a URL, often collaborating with the DAL/DAO to execute CRUD operations. 
                      The controller orchestrates this process, returning results and sending appropriate response codes. 
