removes placeholder image on works

--- a/works.html
+++ b/works.html
@@ -66,13 +66,7 @@
                     Please feel free to use my test email, "test@gmail.com", and password, "1", to login and view the different tabs of <a href="https://skearney2023.azurewebsites.net/#/" target="_blank">the website</a>!
                 </p>
 
-                <h3>Project 3</h3>
-                <p>
-                    <img src="TempPhoto.png" alt="Photo of project 3"/>
-                    <br><br>
-                    
-                    
-                </p>
+                <h3>More To Be Added Soon...</h3>
         </div>
         </div>
     </body> 
