--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </div>
             
             <div class="title">
-                    <h1>Hello! I'm</h1> 
                     <h1 id="myName">Summer Kearney</h1>
+                    <h1><br><br><br>(she/her)</h1>
             <!--https://www.rawpixel.com/image/2533993/premium-illustration-image-abstract-background-->
             <img src="backing.jpg" alt="Background Photo"/>
         </div>
@@ -39,8 +39,8 @@
         <div class="content">
             <section class="rightSection">
                 <h2>About Me</h2>
-                <p>Hello there! My name is Summer! My Pronouns are she/her. I am a student at Fanshawe College, in my last year studying Computer Programming.
-                    I was born and raised in Ontario, Canada. Around school, I am currently working at the <a href="https://www.canada.ca/en/revenue-agency.html" target="_blank">Government Of Canada</a>.
+                <p>Hey there! I'm a passionate Computer Programming student wrapping up my final year at Fanshawe College. 
+                    I was born and raised in Rural Southwestern Ontario, Canada. Around school, I am currently working at the <a href="https://www.canada.ca/en/revenue-agency.html" target="_blank">Government Of Canada</a>.
                     For a deeper dive into my professional journey, head over to the <a href = "experience.html">Experience</a> tab.
                 </p>
                 <p>
@@ -54,7 +54,7 @@
                  </p>
             </section>
             <aside class="leftAside">
-                <img class="homeImg" src="me_pic.jpg" alt="A photo of myself, Summer."/>
+                <img class="homeImg" src="me_outside.jpg" alt="A photo of myself, Summer."/>
             </aside>
         </div>
     </div>
