Changed I am to I

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     I also have an appreciation for capturing moments through photography, exploring my creative side.
                     </br>
                     I'm passionate about continual learning and am always eager to expand my skills. 
-                    I am always seeking opportunities to expand my skills and embrace new challenges. 
-                    Please feel free to <a href = "contact.html">reach out to me</a>!
+                    I always seek opportunities to expand my skills and embrace new challenges. 
+                    <br>Please feel free to <a href = "contact.html">reach out to me</a>!
                  </p>
             </section>
             <aside class="leftAside">
