--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 <h2>About Me</h2>
                 <p>Hey there! I'm a passionate Computer Programming student wrapping up my final year at Fanshawe College. 
                     I was born and raised in Rural Southwestern Ontario, Canada. Around school, I am currently working at the <a href="https://www.canada.ca/en/revenue-agency.html" target="_blank">Government Of Canada</a>.
-                    For a deeper dive into my professional journey, head over to the <a href = "experience.html">Experience</a> tab.
+                    For a deeper dive into my professional journey, head over to the 
+                    <br><a href = "experience.html">Experience</a> tab.
                 </p>
                 <p>
                     Outside of the coding realm, I find joy in various hobbies. 
@@ -50,7 +51,7 @@
                     </br>
                     I'm passionate about continual learning and am always eager to expand my skills. 
                     I always seek opportunities to expand my skills and embrace new challenges. 
-                    <br>Please feel free to <a href = "contact.html">reach out to me</a>!
+                    <br>Please feel free to <br><a href = "contact.html">reach out to me</a>!
                  </p>
             </section>
             <aside class="leftAside">
