updated my program name in about me section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <div class="content">
             <section class="rightSection">
                 <h2>About Me</h2>
-                <p>Hey there! I'm a passionate Computer Programming student wrapping up my final year at Fanshawe College. 
+                <p>Hey there!
+                    <br> I am a passionate Computer Programming Student wrapping up my final year of Computer Programming & Analysis at Fanshawe College. 
                     I was born and raised in Rural Southwestern Ontario, Canada. Around school, I am currently working at the <a href="https://www.canada.ca/en/revenue-agency.html" target="_blank">Government Of Canada</a>.
                     For a deeper dive into my professional journey, head over to the 
                     <br><a href = "experience.html">Experience</a> tab.
