--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 <h2>About Me</h2>
                 <p>Hey there!
                     <br> I am a passionate Computer Programming Student wrapping up my final year of Computer Programming & Analysis at Fanshawe College. 
-                    I was born and raised in Rural Southwestern Ontario, Canada. Around school, I am currently working at the <a href="https://www.canada.ca/en/revenue-agency.html" target="_blank">Government Of Canada</a>.
+                    I was born and raised in Rural Southwestern Ontario, Canada. 
+                    At my current position, I display my strong passion for developing and maintaining software applications.
                     For a deeper dive into my professional journey, head over to the 
                     <br><a href = "experience.html">Experience</a> tab.
                 </p>
