organized images into a folder

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <link href="main.css" rel="stylesheet" type="text/css">
         <!--set viewport-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="logo.png">
+        <link rel="icon" type="image/x-icon" href="img/logo.png">
         <style>
         </style>
     </head>
@@ -14,7 +14,7 @@
         <div id="wrap">
             <header>
                 <nav>
-                    <img src="logo.png" alt="logo picture"/>
+                    <img src="img/logo.png" alt="logo picture"/>
                     <h1>Summer Kearney</h1>
                     <ul> 
                         <li><a href="index.html">Home</a></li>
@@ -31,7 +31,7 @@
         <div class="title">
                 <h1>Contact Me</h1> 
                 <!--https://www.rawpixel.com/image/2533993/premium-illustration-image-abstract-background-->
-                <img src="backing.jpg" alt="Background Photo"/>
+                <img src="img/backing.jpg" alt="Background Photo"/>
         </div>
 
       
@@ -44,7 +44,7 @@
             </section>
             <aside class="leftAside">
                 <!-- https://www.istockphoto.com/search/2/image?phrase=contact+us -->
-                <img src="phone.png" alt="Image of a phone with contact methods."/>
+                <img src="img/phone.png" alt="Image of a phone with contact methods."/>
             </aside>
         </div>
         </div>
