--- a/experience.html
+++ b/experience.html
@@ -5,7 +5,7 @@
         <link href="main.css" rel="stylesheet" type="text/css">
         <!--set viewport-->
         <meta name="viewport" content="width=device-width, initial-scale=1">  
-        <link rel="icon" type="image/x-icon" href="logo.png">      
+        <link rel="icon" type="image/x-icon" href="img/logo.png">      
         <style>
         </style>
     </head>
@@ -14,7 +14,7 @@
         <div id="wrap">
             <header>
                 <nav>
-                    <img src="logo.png" alt="logo picture"/>
+                    <img src="img/logo.png" alt="logo picture"/>
                     <h1>Summer Kearney</h1>
                     <ul> 
                         <li><a href="index.html">Home</a></li>
@@ -30,7 +30,7 @@
     <div class="title">
             <h1>Experience</h1> 
             <!--https://www.rawpixel.com/image/2533993/premium-illustration-image-abstract-background-->
-            <img src="backing.jpg" alt="Background Photo"/>
+            <img src="img/backing.jpg" alt="Background Photo"/>
         </div>
           
 
@@ -110,21 +110,21 @@
         </section>
             <aside class="rightImgBar">
                 <!--https://www.statcan.gc.ca/o1/en/plus/251-have-you-heard-statistics-canada-getting-app-->
-               <img src="CRA.jpg" alt="Image of CRA Technology Logo"/> 
+               <img src="img/CRA.jpg" alt="Image of CRA Technology Logo"/> 
 
                 <!--https://www.facebook.com/KniaziewOptometry1-->
-               <img src="kniaziew.jpg" alt="Image of Knaziew Optometry Logo"/> 
+               <img src="img/kniaziew.jpg" alt="Image of Knaziew Optometry Logo"/> 
 
                 <!--https://www.istockphoto.com/illustrations/stocking-shelves-->
-                <img src="stocking_shelves.jpg" alt="Image of a person stalking shelves"/>
+                <img src="img/stocking_shelves.jpg" alt="Image of a person stalking shelves"/>
                 <br><br><br>
                 <!--https://en.wikipedia.org/wiki/Fanshawe_College-->
-                <img src="Fanshawe.png" alt="Image of a Fanshawe College London logo."/>
+                <img src="img/Fanshawe.png" alt="Image of a Fanshawe College London logo."/>
                 <!-- https://www.siteuptime.com/blog/2021/07/30/5-reasons-to-learn-a-new-computer-programming-language-this-year/-->
                 <!-- <img src="programmer.jpg" alt="Image of a laptop with code on it."/>
                 <br> <br><br>--><br><br>  
                 <!--https://www.st-clair.net/ucc/grade-9-lancer-link-orientation.aspx-->
-                <img src="lancer.png" alt="Image of a ursuline college chatham lancer logo."/>
+                <img src="img/lancer.png" alt="Image of a ursuline college chatham lancer logo."/>
             </aside>
             </div>
         </div>
