--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="main.css" rel="stylesheet" type="text/css">
         <!--set viewport-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="logo.png">
+        <link rel="icon" type="image/x-icon" href="img/logo.png">
         <style>
         </style>
     </head>
@@ -13,7 +13,7 @@
         <div id="wrap">
             <header>
                 <nav>
-                    <img src="logo.png" alt="logo picture"/>
+                    <img src="img/logo.png" alt="logo picture"/>
                     <h1>Summer Kearney</h1>
                     <ul> 
                         <li><a href="index.html">Home</a></li>
@@ -29,9 +29,8 @@
             
             <div class="title">
                     <h1 id="myName">Summer Kearney</h1>
-                    <h1><br><br><br>(she/her)</h1>
             <!--https://www.rawpixel.com/image/2533993/premium-illustration-image-abstract-background-->
-            <img src="backing.jpg" alt="Background Photo"/>
+            <img src="img/backing.jpg" alt="Background Photo"/>
         </div>
         </div>
 
@@ -53,11 +52,11 @@
                     </br>
                     I'm passionate about continual learning and am always eager to expand my skills. 
                     I always seek opportunities to expand my skills and embrace new challenges. 
-                    <br>Please feel free to <br><a href = "contact.html">reach out to me</a>!
+                    <br>Please feel free to <a href = "contact.html">reach out to me</a>!
                  </p>
             </section>
             <aside class="leftAside">
-                <img class="homeImg" src="me_outside.jpg" alt="A photo of myself, Summer."/>
+                <img class="homeImg" src="img/me_outside.jpg" alt="A photo of myself, Summer."/>
             </aside>
         </div>
     </div>
