--- a/works.html
+++ b/works.html
@@ -5,7 +5,7 @@
         <link href="main.css" rel="stylesheet" type="text/css">
         <!--set viewport-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="logo.png">
+        <link rel="icon" type="image/x-icon" href="img/logo.png">
         <style>
         </style>
     </head>
@@ -14,7 +14,7 @@
         <div id="wrap">
             <header>
                 <nav>
-                    <img src="logo.png" alt="logo picture"/>
+                    <img src="img/logo.png" alt="logo picture"/>
                     <h1>Summer Kearney</h1>
                     <ul> 
                         <li><a href="index.html">Home</a></li>
@@ -31,14 +31,14 @@
         <div class="title">
                 <h1>Works</h1> 
                 <!--https://www.rawpixel.com/image/2533993/premium-illustration-image-abstract-background-->
-                <img src="backing.jpg" alt="Background Photo"/>
+                <img src="img/backing.jpg" alt="Background Photo"/>
         </div>
 
             <div class="content">
 
                 <h2>Snake</h2>
                 <p>
-                    <img src="snake_ss.png" alt="Screenshot of original Snake using Java in Eclpise."/>
+                    <img src="img/snake_ss.png" alt="Screenshot of original Snake using Java in Eclpise."/>
                     <br><br>
                     This was my first real programming project! 
                     This project was done in grade 11, originally using Java Swing component in Eclipse. 
@@ -52,7 +52,7 @@
                     
                 <h2>Chips Store</h2>
                 <p>
-                    <img src="chip_app.png" alt="Screenshot of a demo of the chip store application programmed in ASP.NET and Vue.js"/>
+                    <img src="img/chip_app.png" alt="Screenshot of a demo of the chip store application programmed in ASP.NET and Vue.js"/>
                     <br><br>
                     This project is a simulation of what an online chip store could look like, allowing the user to add chips to their cart and "buy" them.
                     It was built using Vue, a JavaScript framework, to build the user interface. 
