--- a/works.html
+++ b/works.html
@@ -14,24 +14,23 @@
         <div id="wrap">
             <header>
                 <nav>
-                    <img src="img/logo.png" alt="logo picture"/>
-                    <h1>Summer Kearney</h1>
-                    <ul> 
+                    <div class="logo-name-container">
+                        <img src="img/logo.png" alt="logo picture"/>
+                        <h1>Summer Kearney</h1>
+                        <div class="menu-toggle">&#9776;</div>
+                    </div>
+                    
+                    <ul class="nav-links"> 
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="works.html" targret="_blank">Works</a></li>
-                        <li><a href = "experience.html">Experience</a></li>
+                        <li><a href="works.html" target="_blank">Works</a></li>
+                        <li><a href="experience.html">Experience</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </header>
-        
-        <div class="spacing">
-        </div>
 
         <div class="title">
-                <h1>Works</h1> 
-                <!--https://www.rawpixel.com/image/2533993/premium-illustration-image-abstract-background-->
-                <img src="img/backing.jpg" alt="Background Photo"/>
+            <h1>Works</h1> 
         </div>
 
             <div class="content">
@@ -69,5 +68,6 @@
                 <h3>More To Be Added Soon...</h3>
         </div>
         </div>
+        <script src="script.js"></script>
     </body> 
 </html>
