--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     
                     <ul class="nav-links"> 
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="works.html" target="_blank">Works</a></li>
+                        <li><a href="works.html">Works</a></li>
                         <li><a href="experience.html">Experience</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
