updated experience to be current

--- a/experience.html
+++ b/experience.html
@@ -37,12 +37,21 @@
         <div class="content">
             <div id="experience">  
 
-                <section class="leftSection">
-                <h2>Work Experience</h2>
+                </br>
+
+                <h3>Software Developer Intern</h3>
+                <h5>MAY 2024 - AUG 2024</h5>
+                <h4>CARFAX US, London, ON</h4>
+                <ul>
+                    <li>Developed software applications using high-level programming languages such as Java.</li> 
+                    <li>Worked with MongoDB structures to build data-driven applications.</li> 
+                    <li>Applied Agile methodologies, such as test-driven development and Groovy-based unit and integration testing.</li> 
+                    <li>Leveraged Jenkins to automate the deployment of applications as part of the company's integration processes.</li>
+                </ul>
                 </br>
 
                 <h3>Computer Programmer Analysis</h3>
-                <h5>JAN 2023 - PRESENT</h5>
+                <h5>JAN 2023 - DEC 2022</h5>
                 <h4>Government Of Canada, London, ON</h4>
                 <ul>
                     <li>Developed and debugged programs in VBA to scrape information from COBOL Mainframe.</li> 
@@ -106,26 +115,7 @@
                     <li>OOP in Java</li>
                 </ul>
             </ul>
-        </section>
-            <aside class="rightImgBar">
-                <!--https://www.statcan.gc.ca/o1/en/plus/251-have-you-heard-statistics-canada-getting-app-->
-               <img src="img/CRA.jpg" alt="Image of CRA Technology Logo"/> 
-
-                <!--https://www.facebook.com/KniaziewOptometry1-->
-               <img src="img/kniaziew.jpg" alt="Image of Knaziew Optometry Logo"/> 
-
-                <!--https://www.istockphoto.com/illustrations/stocking-shelves-->
-                <img src="img/stocking_shelves.jpg" alt="Image of a person stalking shelves"/>
-                <br><br><br>
-                <!--https://en.wikipedia.org/wiki/Fanshawe_College-->
-                <img src="img/Fanshawe.png" alt="Image of a Fanshawe College London logo."/>
-                <!-- https://www.siteuptime.com/blog/2021/07/30/5-reasons-to-learn-a-new-computer-programming-language-this-year/-->
-                <!-- <img src="programmer.jpg" alt="Image of a laptop with code on it."/>
-                <br> <br><br>--><br><br>  
-                <!--https://www.st-clair.net/ucc/grade-9-lancer-link-orientation.aspx-->
-                <img src="img/lancer.png" alt="Image of a ursuline college chatham lancer logo."/>
-            </aside>
-            </div>
+    
         </div>
       </div>  
 
