updated contact info

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
       
         <div class="content">
             <section class="rightSection">
-            <p>Email:<a href="mailto:s_kearney@fanshaweonline.ca"> skearney95@live.ca</a></p>
+            <p>Email:<a href="mailto:summer.kearney314@gmail.com"> summer.kearney314@gmail.com</a></p>
             </br>
             <p>LinkedIn:<a href="https://ca.linkedin.com/in/summer-kearney"> Summer-Kearney</a></p>
             <!-- <p>Phone:<a href="tel:2266273412"> (226)-627-3412</a></p> -->
